sources from uDig 1.2-RC