@@ -1,5 +1,6 @@
 package net.refractions.udig.catalog.tests.ui.dnd;
 
+import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.util.Iterator;
@@ -36,8 +37,12 @@ public class CatalogViewDNDTest extends TestCase {
 	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
-
-		catalog = CatalogPlugin.getDefault().getLocalCatalog();
+		try {
+		    catalog = CatalogPlugin.getDefault().getLocalCatalog();
+		}
+		catch( NullPointerException npe ){
+		    fail("Please run as a Plug-in Test");
+		}
 		for (Iterator itr = catalog.members(new DummyMonitor()).iterator(); itr
 				.hasNext();) {
 			catalog.remove((IService) itr.next());
@@ -153,7 +158,8 @@ public class CatalogViewDNDTest extends TestCase {
 	Object getDataMulti() throws Exception {
 		return new URL[] {
 				new URL(DummyService.url.toExternalForm() + "/dummy1"), //$NON-NLS-1$
-				new URL(DummyService.url.toExternalForm() + "/dummy2") //$NON-NLS-1$
+				new URL(DummyService.url.toExternalForm() + "/dummy2"), //$NON-NLS-1$
+				new File("Does Not Exist").toURL() //$NON-NLS-1$
 		};
 	}
 
